# connectome-constrained-model

./: .gitignore  pyproject.toml
src/: .gitignore  SWEEP_SUMMARY.md  plot_sweep_results.py  sweep_log.txt
src/atlas_transformer/: __init__.py  __main__.py  config.py  dataset.py  evaluate.py  model.py  run_atlas.py  train.py
src/baseline_transformer/: __init__.py  __main__.py  config.py  dataset.py  evaluate.py  model.py  run_baseline.py  train.py
src/scripts/: __init__.py  _aggregate_loo.py  _diag_freerun.py  _finish_sweep.py  _plot_baseline_cv.py  _smoke_test_lag_route.py  ar2mlp_wd_cv.py  ar2mlp_wd_cv_postprocess.py  attractor_diagnostics.py  batch_4model_all_worms.py  batch_4model_benchmark.py  batch_all_worms.py  batch_ar2_mlp.py  batch_ridge_mlp.py  batch_stage2_repro.py  behaviour_decoder_arch_sweep.py  behaviour_decoder_arch_sweep_fr.py  behaviour_decoder_models_v8.py  behaviour_decoder_set_transformer.py  behaviour_decoder_set_transformer_variants.py  behaviour_stats_top1.py  benchmark_ar_decoder_v2.py  benchmark_gru_decoder.py  build_T_maps.py  build_connectome.py  build_shapes_and_reconstruct_video.py  closed_loop_behaviour.py  compare_all_worms.py  compare_ridge_weights.py  compute_cv_loo.py  compute_cv_loo_first3.py  connectome_neural_decoder.py  diag_mlp_vs_ridge.py  diag_retrain_sweep.py  diag_retrain_sweep_trf.py  eval_atlas_onestep_conditions.py  explore_init.py  fair_comparison.py  launch_v4_parallel.sh  loo_baseline_ridge_mlp.py  (+132 more)
src/stage1/: __init__.py  add_stephens_eigenworms.py  config.py  em.py  io_h5.py  plot.py  preprocess.py  run_stage1.py
(+50 files in other folders)
